<resources>
    <string name="app_name">ShoeStore</string>
    <string name="login_label">Login</string>
    <string name="welcome_label">Welcome !</string>
    <string name="instruction_label">How To ?</string>
    <string name="shoelist_label">Shoe Store Inventory</string>
    <string name="detail_label">Shoe Entry</string>
    <string name="email_label">E-mail</string>
    <string name="email_hint">e.g.: myname@myhost.domain</string>
    <string name="password_label">Password</string>
    <string name="password_hint">e.g : S0undP4$$w0rd</string>
    <string name="logout_text">Log Out</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="login_button_text">Log In</string>
    <string name="welcome_title">Shoes Inventory</string>
    <string name="welcome_teaser">Shoe Store Inventory : never lose track of your Shoe models again.</string>
    <string name="welcome_to_instructions">How do I do that?</string>
    <string name="instruction_title">Shoe Inventory 101</string>
    <string name="instruction_description">
        Go the Shoes Inventory screen. Then tap the add button to record a new model.
    </string>
    <string name="instruction_to_shoelist">Visualize Shoes Inventory</string>
    <string name="shoelist_to_detail">View Details</string>
    <string name="shoedetail_label">Shoe Detail</string>
    <string name="shoedetail_name_label">Shoe Name</string>
    <string name="shoedetail_company_label">Company</string>
    <string name="shoedetail_size_label">Size</string>
    <string name="shoedetail_cancel">Cancel</string>
    <string name="shoedetail_save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
