<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title" />

        <TextView
            android:id="@+id/welcome_teaser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_teaser" />

        <Button
            android:id="@+id/welcome_to_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_instructions" />
    </LinearLayout>


</layout>