<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <!--
    The instruction screen, with its quite flat content hierarchy (a title,
    a description and a navigation button), totally fits with the purposes
    of a LinearLayout.
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/instruction_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/headingText"
            android:text="@string/instruction_title" />

        <TextView
            android:id="@+id/instruction_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/descriptionBlock"
            android:text="@string/instruction_description" />

        <LinearLayout
            style="@style/buttonNavigationLayout">
            <Button
                android:id="@+id/instruction_to_shoelist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instruction_to_shoelist" />
        </LinearLayout>

    </LinearLayout>

</layout>